--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/chromatic-circle-clean.ico" />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/chromatic-circle.ico"
+      sizes="16x16 64x64 256x256 512x512"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="%PUBLIC_URL%/chromatic-circle064.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
