--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="%PUBLIC_URL%/chromatic-circle.ico"
-      sizes="16x16 64x64 256x256 512x512"
-      type="image/x-icon"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="64x64"
-      href="%PUBLIC_URL%/chromatic-circle064.png"
-    />
+    <!-- Favicon for modern browsers -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />  
+    <!-- Fallback Favicon for older browsers -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Musicology app"
     />
     <!--link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" -->
     <!--
