--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,37 @@
   <head>
     <meta charset="utf-8" />
     <!-- Favicon for modern browsers -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />  
+    <link rel="icon" href="%PUBLIC_URL%/chromatic-circle.svg" type="image/svg+xml" />  
     <!-- Fallback Favicon for older browsers -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/chromatic-circle.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Musicology app"
     />
-    <!--link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/chromatic-circle.ico">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <head>
+      <meta charset="utf-8" />
+      <!-- Favicon -->
+      <link rel="icon" href="%PUBLIC_URL%/chromatic-circle.svg" type="image/svg+xml" />  
+      <link rel="icon" href="%PUBLIC_URL%/chromatic-circle.ico" />
+      
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="theme-color" content="#000000" />
+      <meta name="description" content="Musicology app" />
+  
+      <!-- Open Graph Meta Tags -->
+      <meta property="og:title" content="Musicology - Explore Music Theory" />
+      <meta property="og:description" content="A powerful app for learning and exploring music theory." />
+      <meta property="og:image" content="https://chromatic-circle.netlify.app/chromatic-circle512.png" />
+      <meta property="og:url" content="https://chromatic-circle.netlify.app/" />
+      <meta property="og:type" content="website" />
     <title>Musicology</title>
   </head>
   <body>
