--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <head>
       <meta charset="utf-8" />
       <!-- Favicon -->
-      <link rel="icon" href="%PUBLIC_URL%/chromatic-circle.svg" type="image/svg+xml" />  
-      <link rel="icon" href="%PUBLIC_URL%/chromatic-circle.ico" />
+      <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />  
+      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
       
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
