--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Musicology - Explore Music Theory" />
     <meta property="og:description" content="A powerful app for learning and exploring music theory." />
-    <meta property="og:image" content="https://chromatic-circle.netlify.app/app-icon-512.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/app-icon-512.png" />
     <meta property="og:url" content="https://chromatic-circle.netlify.app/" />
     <meta property="og:type" content="website" />
     <title>Musicology</title>
